--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "JSONStream": "^1.3.5",
     "event-stream": "^4.0.1",
+    "minimist": "^1.2.0",
     "superagent": "^5.1.0",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
