--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "JSONStream": "^1.3.5",
     "event-stream": "^4.0.1",
     "minimist": "^1.2.0",
+    "mongodb": "^3.5.2",
     "superagent": "^5.1.0",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
