Added workspaces and new script for creating users for SPL

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "superagent": "^5.1.0",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
-  }
+  },
+  "private": true,
+  "workspaces": [
+    "util",
+    "patrons"
+  ]
 }
