--- a/util/package.json
+++ b/util/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.12.6",
     "uuid": "^3.3.3",
     "uuid4": "^1.1.4"
   }
