--- a/util/package.json
+++ b/util/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "ajv": "^6.12.6",
+    "csv-parse": "^4.15.3",
     "uuid": "^3.3.3",
     "uuid4": "^1.1.4"
   }
