--- a/util/Makefile-spl
+++ b/util/Makefile-spl
@@ -8,6 +8,7 @@ mrc = bibs.mrc
 enc = utf8.mrc
 wd = ~/folio-import
 ten = spokane-test
+#ten = spokane
 ref = /data/spl/ref
 refinv = $(ref)/inventory_storage_module
 refcir = $(ref)/circulation_storage_module
@@ -17,7 +18,7 @@ help:
 	@echo "Usage: make [ help | remove-default-ref | inventory-ref | groups | circ-ref | feesfines-ref | configurations | templates | marc | instances | holdings-items | users | loans | toggle-inactive-users | requests | feesfines | feesfines-assess | feesfines-transform | clean-inventory | clean-users | clean-loans | clean-requests ]"
 
 remove-default-ref:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node deleteByEndpoint.js locations
 	cd $(wd); node deleteByEndpoint.js location-units/libraries
 	cd $(wd); node deleteByEndpoint.js location-units/campuses
@@ -26,7 +27,7 @@ remove-default-ref:
 	cd $(wd); node deleteByEndpoint.js groups
 
 inventory-ref:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node loadRefData.js \
 		$(refinv)/service-points.json \
 		$(refinv)/*location*.json \
@@ -35,23 +36,23 @@ inventory-ref:
 		$(refinv)/calendar*.json
 
 groups:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node loadRefData.js $(ref)/users/groups.json
 
 circ-ref:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node loadRefData.js $(refcir)/*.json
 
 feesfines-ref:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node loadRefData.js $(ref)/feesfines/*.json
 
 configurations:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node loadRefData.js $(ref)/configuration/*entries*json
 
 templates:
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node loadRefData.js $(ref)/template_engine_module/*.json
 
 marc: $(assets)/marc/gr*.mrc
@@ -66,7 +67,7 @@ marc: $(assets)/marc/gr*.mrc
 
 instances: $(inv)/$(enc)
 	@echo Getting fresh reference data...
-	$(wd)/bash/login-spokane-test.sh
+	$(wd)/bash/login-$(ten).sh
 	$(wd)/bash/reference_inventory.sh $(inv)/ref
 	$(wd)/perl/marc2inst.pl $(wd)/mapping_rules/spl.json $(inv)/ref/ $(inv)/utf8_fixed.mrc
 	cd $(inv); split -l 25000 utf8_fixed_instances.jsonl inst
@@ -82,10 +83,10 @@ holdings-items: $(inv)/$(enc)
 users: $(assets)/json/hz-users-*
 	mkdir $(users)
 	cat $(assets)/json/hz-users-* > $(users)/hz-users.json
-	cd $(wd)/bash; ./login-spokane-test.sh
+	cd $(wd)/bash; ./login-$(ten).sh
 	cd $(wd)/bash; ./reference_users.sh $(users)/
 	cd $(wd)/patrons; node splUsers.js $(users)/hz-users.json
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	cd $(wd); node splitLargeJson 50000 $(users)/users_00001.json users
 	cd $(wd); node splitLargeJson 50000 $(users)/perms.json permissionUsers
 	cd $(wd); node splitLargeJson 50000 $(users)/logins.json
@@ -93,7 +94,7 @@ users: $(assets)/json/hz-users-*
 loans: $(assets)/json/hz-loans-\(*
 	mkdir $(loans)
 	jq '.[]' $(assets)/json/hz-loans-\(* | jq -s . > $(loans)/hz-loans.json
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	@echo --- Downloading users...
 	cd $(wd); node downloadAllUsers.js $(loans)
 	@echo --- Downloading service-points...
@@ -113,7 +114,7 @@ requests: $(assets)/json/hz-requests.json
 
 feesfines:
 	@echo --- Getting system data for feesfines ...
-	cd $(wd); grep $(ten) config.js
+	cd $(wd); grep "$(ten)-okapi" config.js
 	mkdir $(feesfines); chgrp admin $(feesfines); chmod g+s $(feesfines)
 	@echo --- Downloading some reference data ...
 	cd $(wd); node downloadAllByEndpoint.js locations $(feesfines)
