--- a/util/Makefile-spl
+++ b/util/Makefile-spl
@@ -155,6 +155,22 @@ feesfines-transform: feesfines-assess
 	cp -p $(feesfines)/uuids-ff.json /data/dcrossley/spl-feesfines
 	cat $(feesfines)/summary-feesfines.json | grep "num"
 
+feesfines-test-transform: feesfines-assess
+	@echo --- Doing $@ ...
+	cp /data/dcrossley/spl-feesfines/uuids-ff-test.json $(feesfines)
+	cd $(feesfines); python3 $(wd)/python/spl-feesfines/spl_feesfines.py \
+		-u users-map.tsv -m items.json -n loans.json -v verbs-map.tsv \
+		-c locations.json -y material-types.json -p service-points.json \
+		-o feesfines-accounts-test.jsonl -a feesfines-actions-test.jsonl \
+		-j feesfines-adjustments-test.jsonl -t feesfines-transactions-test.jsonl \
+		-e errors-feesfines-test.json -s summary-feesfines-test.json \
+		-f uuids-ff-test.json -l debug \
+		-i /data/dcrossley/spl-feesfines/hz-ledger-test-6.json
+	cp -p $(feesfines)/uuids-ff-test.json /data/dcrossley/spl-feesfines
+	cat $(feesfines)/summary-feesfines-test.json | grep "num"
+
+.PHONY: feesfines-test-transform
+
 clean-inventory:
 	rm -rf $(inv)
 
