--- a/util/Makefile-hc
+++ b/util/Makefile-hc
@@ -5,6 +5,7 @@ inv-dir = $(data)/marc
 holdings-dir = $(data)/holdings
 orders-dir = $(data)/orders
 users-dir = /data/sftpusers/holycross/users
+iv-dir = $(data)/invoices
 pat-dir = $(users-dir)/Sierra\ Patrons
 acq-ref = $(data)/acq-ref
 inv-ref = $(data)/inv-ref
@@ -113,20 +114,28 @@ setup:
 	cp $(wd)/etc/holycross/ptypes.tsv $(usr-ref)
 
 orders-from-marc:
-	mv $(orders-dir)/*out* $(orders-dir)/orders.mrc;
+	mv $(orders-dir)/*.mrc $(orders-dir)/orders.mrc;
 	cat $(inv-dir)/*.map > $(acq-ref)/bibs.map
 	yaz-marcdump -f marc8 -t utf8 -l 9=97 -o json $(orders-dir)/orders.mrc | jq . -c > $(orders-dir)/orders.json
-	node $(wd)/acquisitions/hcOrdersFromMarc.js $(acq-ref) $(orders-dir)/orders.json 2020-07
-	split -n l/5 $(orders-dir)/purchase-orders.jsonl $(orders-dir)/pos_
-	split -n l/5 $(orders-dir)/po-lines.jsonl $(orders-dir)/pol_
-	split -n l/5 $(orders-dir)/summaries.jsonl $(orders-dir)/sum_
-	split -n l/5 $(orders-dir)/transactions.jsonl $(orders-dir)/tra_
+	node $(wd)/acquisitions/hcOrdersFromMarc.js $(acq-ref) $(orders-dir)/orders.json
+	cat $(orders-dir)/*composite-orders.jsonl > $(orders-dir)/all-composite-orders.jsonl
+
+invoices: $(iv-dir)/groovy*json
+	cp $(iv-dir)/groovy*json $(iv-dir)/iii-invoices.json
+	node $(wd)/acquisitions/hcInvoices.js $(acq-ref) $(orders-dir) $(iv-dir)/iii-invoices.json 2010
+
+invoice-approvals:
+	cd $(wd); node downloadJSONL.js invoice/invoices $(iv-dir)/temp.jsonl
+	jq '.status="Approved"' $(iv-dir)/temp.jsonl -c > $(iv-dir)/approvals.jsonl
+
+invoice-paid:
+	cd $(wd); node downloadJSONL.js invoice-storage/invoices $(iv-dir)/temp.jsonl
+	jq '.status="Paid"' $(iv-dir)/temp.jsonl -c > $(iv-dir)/paid.jsonl
 
 clean-orders:
 	mv $(orders-dir)/orders.mrc $(orders-dir)/all-orders.out.mrc
 	rm $(orders-dir)/*.jsonl
 	rm $(orders-dir)/*.log
-	rm $(orders-dir)/*_??
 
 clean:
 	rm login*.sh
