Udpates to cub Makefile.

--- a/etc/cub/Makefile
+++ b/etc/cub/Makefile
@@ -22,11 +22,13 @@ marc-group: $(marcdir)/*.mrc
 	cd $(marcdir); cat marc0[89]*.mrc > part5.mrc
 
 instances: $(marcdir)/part*mrc
-
+	./run-multi.sh ./marc2inst-cub.pl mapping-rules.json $(iref) $(marcdir)/part?.mrc
 setup:
 	cd $(wd); git pull	
 	cp $(wd)/configs/bash/login-cubl.sh .
 	cp $(wd)/bash/reference_* .
+	cp $(wd)/perl/marc2inst-cub.pl .
+	cp $(wd)/mapping_rules/default.json mapping-rules.json
 	mkdir $(iref)
 	mkdir $(uref)
 	mkdir $(aref)
@@ -36,6 +38,8 @@ setup:
 	./reference_finance.sh $(aref)
 	./reference_acq.sh $(aref)
 	./reference_org.sh $(aref)
+	cp $(wd)/etc/cub/*.tsv $(iref)
+	cp $(wd)/etc/cub/*.* $(aref)
 
 clean:
 	rm -rf $(iref)
