Updates to cub Makefile.

--- a/etc/cub/Makefile
+++ b/etc/cub/Makefile
@@ -1,6 +1,7 @@
 data=/data/colorado
-marcdir=$(data)/marc
+marcdir=$(data)/marc2
 itemdir=$(data)/item
+holdir=$(data)/holdings
 log=$(data)/log
 home=/home/charles
 sdir=$(home)/sierra-api/js
@@ -9,10 +10,27 @@ iref=$(data)/inv-ref
 uref=$(data)/usr-ref
 aref=$(data)/acq-ref
 
-get-items: $(itemdir)
+get-marc:
+ifeq ($(wildcard $(marcdir)/.),)
+	mkdir $(marcdir)
+endif
+	cd $(sdir); node downloadMarc.js -s 0 -e 1499 $(marcdir) > $(log)/marc0.log & 
+	cd $(sdir); node downloadMarc.js -s 1500 -e 2999 $(marcdir) > $(log)/marc1.log & 
+	cd $(sdir); node downloadMarc.js -s 3000 $(marcdir) > $(log)/marc2.log & 
+
+get-items:
+ifeq ($(wildcard $(itemdir)/.),)
+	mkdir $(itemdir)
+endif
 	cd $(sdir); node downloadItems.js -s 0 -e 1999 $(itemdir) > $(log)/items0.log & 
 	cd $(sdir); node downloadItems.js -s 2000 -e 3999 $(itemdir) > $(log)/items1.log & 
 	cd $(sdir); node downloadItems.js -s 4000 $(itemdir) > $(log)/items2.log & 
+
+get-holdings:
+ifeq ($(wildcard $(holdir)/.),)
+	mkdir $(holdir)
+endif
+	cd $(sdir); node downloadHoldings.js $(holdir) > $(log)/iii-holdings.log 2>/dev/null & 
 
 marc-group: $(marcdir)/*.mrc
 	cd $(marcdir); cat marc0[01]*.mrc > part1.mrc
@@ -23,6 +41,11 @@ marc-group: $(marcdir)/*.mrc
 
 instances: $(marcdir)/part*mrc
 	./run-multi.sh ./marc2inst-cub.pl mapping-rules.json $(iref) $(marcdir)/part?.mrc
+
+items: $(itemdir)/*.jsonl
+	cat $(marcdir)/*.map > $(itemdir)/instance.map
+	cat $(itemdir)/items0*.jsonl > $(itemdir)/sierra-items.jsonl
+	cd $(wd)/perl; ./items-cub.pl $(iref) $(itemdir)/instance.map $(itemdir)/sierra-items.jsonl > $(log)/make-items.log &
 setup:
 	cd $(wd); git pull	
 	cp $(wd)/configs/bash/login-cubl.sh .
